# ia2_learning_env

./: .gitignore  .gitmodules  Cargo.toml  README.md  TO_DO.md  plotter.ipynb
doc/: ECS.md  TO_DO.md  docs_1D.md  target_selection.md
input/: linear_input.in
logs/dataset_test/: random_with_jittering.in
python_plotter/: plotter.ipynb
src/: lib.rs
src/components/: env_component.rs  mod.rs
src/control/: control.rs
src/env_common/: common.rs
src/follow_apple/: follow_apple.rs  mod.rs  trajectories.rs
src/menu/: menu.rs
src/ressources/: env_ressources.rs  input_ressources.rs  mod.rs  socket_ressources.rs
src/score_basics/: score.rs
src/systems/: bouncing_ball.rs  communication.rs  env_systems.rs  mod.rs  player.rs  read_input.rs  state_handling.rs
src/target_selection/: target.rs
src/trajectory_basics/: mod.rs  trajectory_handling.rs
