[package]
name = "ia2_learning_env"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
rand = "0.8.5"
rand_distr = "0.4.3"
random = "0.14.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
